--- a/sass/sections/_productExpert.scss
+++ b/sass/sections/_productExpert.scss
@@ -37,6 +37,8 @@
             font-weight: 400;
             margin: 0 auto 15px;
             max-width: fit-content;
+            max-width: -moz-fit-content;
+            max-width: -webki-fit-content;
             padding: 3px 10px 0;
             background: #44c680;
         }
