--- a/css/custom.css
+++ b/css/custom.css
@@ -480,6 +480,7 @@ body.postid-21695 .productComponents #openModal:hover {
   line-height: 30px;
   border: 0;
   min-width: fit-content;
+  max-width: -webki-fit-content;
   cursor: pointer;
   transition: ease .3s;
 }
@@ -771,6 +772,7 @@ body.postid-21695 .productComponents #openModal:hover {
   display: flex;
   justify-content: space-between;
   max-width: fit-content;
+  max-width: -webki-fit-content;
   margin: 0 auto;
 }
 
@@ -827,6 +829,8 @@ body.postid-21695 .productComponents #openModal:hover {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 100%;
+  overflow: hidden;
   transition: ease .3s;
 }
 
@@ -985,6 +989,7 @@ body.postid-21695 .productComponents #openModal:hover {
 
 .productComponents .btn {
   max-width: fit-content;
+  max-width: -webki-fit-content;
   margin: 50px auto;
   cursor: pointer;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
@@ -1327,6 +1332,7 @@ body.postid-21695 .productComponents #openModal:hover {
   display: flex;
   flex-direction: row;
   max-width: fit-content;
+  max-width: -webki-fit-content;
   margin: 0 auto 10px;
 }
 
@@ -1411,6 +1417,7 @@ body.postid-21695 .productComponents #openModal:hover {
   display: flex;
   flex-direction: row;
   max-width: fit-content;
+  max-width: -webki-fit-content;
   margin: 0 auto;
   padding: 30px 20px;
   border-bottom: 1px solid #DBDBDB;
@@ -2524,6 +2531,7 @@ body.single-post nav.post-navigation {
 
 .contentPost .postProducts a {
   max-width: fit-content;
+  max-width: -webki-fit-content;
   margin: 0 auto;
 }
 
@@ -2705,6 +2713,7 @@ body.woocommerce-cart .entry-content {
 .ssCart table.cart td.product-price ins {
   display: block;
   max-width: fit-content;
+  max-width: -webki-fit-content;
   background: #44c680;
   padding: 0 3px;
 }
@@ -2823,6 +2832,7 @@ body.woocommerce-cart .entry-content {
 
 .ssCart table.cart td.actions .coupon-actions button[name="update_cart"] {
   max-width: fit-content;
+  max-width: -webki-fit-content;
 }
 
 .ssCart table.cart td.actions .coupon-actions button[name="update_cart"]:disabled {
@@ -2836,6 +2846,7 @@ body.woocommerce-cart .entry-content {
   justify-content: center;
   width: 100%;
   max-width: fit-content;
+  max-width: -webki-fit-content;
   height: 36px;
   background-color: #44c680;
   color: #fff;
@@ -3023,6 +3034,7 @@ body.woocommerce-cart .entry-content {
   }
   .ssCart table.shop_table tr td.actions .coupon-actions .coupon .coupon-trigger {
     max-width: fit-content;
+    max-width: -webki-fit-content;
     margin: 0 auto;
   }
   .ssCart table.shop_table tr td.actions .coupon-actions .coupon__toshow {
@@ -5074,6 +5086,7 @@ body.woocommerce-account .entry-header {
 
 .pageProducts .productsInfo__section .content .btn {
   max-width: fit-content;
+  max-width: -webki-fit-content;
   margin: 0 auto;
 }
 
@@ -5226,6 +5239,16 @@ body.woocommerce-account .entry-header {
   }
 }
 
+@media (max-width: 767px) {
+  .shopHeading {
+    min-height: 0;
+    margin: 0 0 30px;
+  }
+  .shopHeading__wrap {
+    display: none;
+  }
+}
+
 .shopProducts__heading {
   max-width: 1410px;
   margin: 0 auto 30px;
@@ -5244,6 +5267,24 @@ body.woocommerce-account .entry-header {
   justify-content: center;
   flex-wrap: wrap;
   margin: 0 0 30px;
+}
+
+@media (max-width: 1629px) {
+  .shopProducts__heading {
+    max-width: 960px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .shopProducts__heading {
+    max-width: 900px;
+  }
+}
+
+@media (max-width: 767px) {
+  .shopProducts__heading h2 {
+    text-align: center;
+  }
 }
 
 .productTile {
@@ -5389,6 +5430,7 @@ body.woocommerce-account .entry-header {
 .homeHeader__content a {
   margin-top: 40px;
   max-width: fit-content;
+  max-width: -webki-fit-content;
 }
 
 .homeHeader__mobilebg {
@@ -5672,6 +5714,7 @@ body.woocommerce-account .entry-header {
 
 .homeInfoTile .btn {
   max-width: fit-content;
+  max-width: -webki-fit-content;
   margin: 15px auto 0;
 }
 
@@ -5816,6 +5859,7 @@ body.woocommerce-account .entry-header {
 
 .logosList__logo {
   width: fit-content;
+  max-width: -webki-fit-content;
   text-align: center;
   max-height: 40px;
   opacity: .7;
@@ -6024,6 +6068,7 @@ body.woocommerce-account .entry-header {
   font-weight: 400;
   margin: 0 auto 15px;
   max-width: fit-content;
+  max-width: -webki-fit-content;
   padding: 3px 10px 0;
   background: #44c680;
 }
@@ -6225,6 +6270,7 @@ body.admin-bar .siteHeader--float {
   right: 0;
   margin: 5px auto 0;
   max-width: fit-content;
+  max-width: -webki-fit-content;
   text-align: center;
 }
 
@@ -6370,6 +6416,7 @@ body.admin-bar .siteHeader--float {
 .menuDropdown__list {
   display: flex;
   max-width: fit-content;
+  max-width: -webki-fit-content;
   margin: 0 auto 30px;
 }
 
@@ -6534,6 +6581,8 @@ body.admin-bar .mobileMenu {
   padding: 0;
   margin: 0 20px 0 50px;
   list-style: none;
+  max-height: calc(100vh - 120px);
+  overflow: scroll;
 }
 
 .mobileMenu__menu .menu li {
@@ -6883,6 +6932,7 @@ body.admin-bar .mobileMenu {
   text-align: center;
   color: #fff !important;
   max-width: fit-content;
+  max-width: -webki-fit-content;
   padding: 4px 8px 2px;
   background: #6BC385;
 }
@@ -6907,6 +6957,7 @@ body.admin-bar .mobileMenu {
 
 .modalAdded__continue .btn {
   max-width: fit-content;
+  max-width: -webki-fit-content;
   height: 40px;
 }
 
@@ -6937,6 +6988,7 @@ body.admin-bar .mobileMenu {
   }
   .modalAdded__products {
     width: fit-content;
+    width: -webki-fit-content;
     min-width: auto;
     flex-wrap: nowrap;
   }
