--- a/sass/parts/_siteHeader.scss
+++ b/sass/parts/_siteHeader.scss
@@ -89,6 +89,8 @@ body{
         right: 0;
         margin: 5px auto 0;
         max-width: fit-content;
+        max-width: -moz-fit-content;
+        max-width: -webki-fit-content;
         text-align: center;
 
         a{
@@ -265,6 +267,8 @@ body{
     &__list{
         display: flex;
         max-width: fit-content;
+        max-width: -moz-fit-content;
+        max-width: -webki-fit-content;
         margin: 0 auto 30px;
     }
     &__product{
@@ -440,6 +444,8 @@ body.admin-bar{
             padding: 0;
             margin: 0 20px 0 50px;
             list-style: none;
+            max-height: calc(100vh - 120px);
+            overflow: scroll;
 
             li{
                 border-top: 1px solid #D5D5D5;
