--- a/sass/sections/_homeHeader.scss
+++ b/sass/sections/_homeHeader.scss
@@ -26,6 +26,8 @@
         a{
             margin-top: 40px;
             max-width: fit-content;
+            max-width: -moz-fit-content;
+            max-width: -webki-fit-content;
         }
     }
     &__mobilebg{
