--- a/sass/sections/_homeInfoTiles.scss
+++ b/sass/sections/_homeInfoTiles.scss
@@ -39,6 +39,8 @@
     }
     .btn{
         max-width: fit-content;
+        max-width: -moz-fit-content;
+        max-width: -webki-fit-content;
         margin: 15px auto 0;
     }
 }
