--- a/sass/subpages/_cart.scss
+++ b/sass/subpages/_cart.scss
@@ -117,6 +117,8 @@ body.woocommerce-cart{
                 ins{
                     display: block;
                     max-width: fit-content;
+                    max-width: -moz-fit-content;
+                    max-width: -webki-fit-content;
                     background: #44c680;
                     padding: 0 3px;
                 }
@@ -228,6 +230,8 @@ body.woocommerce-cart{
                         }
                         &[name="update_cart"]{
                             max-width: fit-content;
+                            max-width: -moz-fit-content;
+                            max-width: -webki-fit-content;
 
                             &:disabled{
                                 pointer-events: none;
@@ -242,6 +246,8 @@ body.woocommerce-cart{
                     justify-content: center;
                     width: 100%;
                     max-width: fit-content;
+                    max-width: -moz-fit-content;
+                    max-width: -webki-fit-content;
                     height: 36px;
                     background-color: #44c680;
                     color: #fff;
@@ -450,6 +456,8 @@ body.woocommerce-cart{
 
                                 .coupon-trigger{
                                     max-width: fit-content;
+                                    max-width: -moz-fit-content;
+                                    max-width: -webki-fit-content;
                                     margin: 0 auto;
                                 }
                                 &__toshow{
