--- a/sass/subpages/_productPage.scss
+++ b/sass/subpages/_productPage.scss
@@ -404,6 +404,8 @@ body.postid-21695{
                         line-height: 30px;
                         border: 0;
                         min-width: fit-content;
+                        max-width: -moz-fit-content;
+                        max-width: -webki-fit-content;
                         cursor: pointer;
                         transition: ease .3s;
 
@@ -722,6 +724,8 @@ body.postid-21695{
         display: flex;
         justify-content: space-between;
         max-width: fit-content;
+        max-width: -moz-fit-content;
+        max-width: -webki-fit-content;
         margin: 0 auto;
     }
     &__video{
@@ -775,6 +779,8 @@ body.postid-21695{
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                border-radius: 100%;
+                overflow: hidden;
                 transition: ease .3s;
             }
         }
@@ -937,6 +943,8 @@ body.postid-21695{
     }
     .btn{
         max-width: fit-content;
+        max-width: -moz-fit-content;
+        max-width: -webki-fit-content;
         margin: 50px auto;
         cursor: pointer;
         box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, .5);
@@ -1275,6 +1283,8 @@ body.postid-21695{
             display: flex;
             flex-direction: row;
             max-width: fit-content;
+            max-width: -moz-fit-content;
+            max-width: -webki-fit-content;
             margin: 0 auto 10px;
 
             span{
@@ -1398,6 +1408,8 @@ body.postid-21695{
         display: flex;
         flex-direction: row;
         max-width: fit-content;
+        max-width: -moz-fit-content;
+        max-width: -webki-fit-content;
         margin: 0 auto;
         padding: 30px 20px;
         border-bottom: 1px solid #DBDBDB;
