--- a/sass/subpages/_products.scss
+++ b/sass/subpages/_products.scss
@@ -93,6 +93,8 @@
                 }
                 .btn{
                     max-width: fit-content;
+                    max-width: -moz-fit-content;
+                    max-width: -webki-fit-content;
                     margin: 0 auto;
                 }
             }
