--- a/sass/parts/_modalAdded.scss
+++ b/sass/parts/_modalAdded.scss
@@ -85,7 +85,7 @@
             color: #fff !important;
             max-width: fit-content;
             max-width: -moz-fit-content;
-            max-width: -webki-fit-content;
+            max-width: -webkit-fit-content;
             padding: 4px 8px 2px;
             background: #6BC385;
         }
@@ -109,7 +109,7 @@
         .btn{
             max-width: fit-content;
             max-width: -moz-fit-content;
-            max-width: -webki-fit-content;
+            max-width: -webkit-fit-content;
             height: 40px;
         }
     }
@@ -146,7 +146,7 @@
         &__products{
             width: fit-content;
             width: -moz-fit-content;
-            width: -webki-fit-content;
+            width: -webkit-fit-content;
             min-width: auto;
             flex-wrap: nowrap;
         }
