--- a/sass/parts/_siteHeader.scss
+++ b/sass/parts/_siteHeader.scss
@@ -90,7 +90,7 @@ body{
         margin: 5px auto 0;
         max-width: fit-content;
         max-width: -moz-fit-content;
-        max-width: -webki-fit-content;
+        max-width: -webkit-fit-content;
         text-align: center;
 
         a{
@@ -268,7 +268,7 @@ body{
         display: flex;
         max-width: fit-content;
         max-width: -moz-fit-content;
-        max-width: -webki-fit-content;
+        max-width: -webkit-fit-content;
         margin: 0 auto 30px;
     }
     &__product{
