--- a/sass/sections/_homeHeader.scss
+++ b/sass/sections/_homeHeader.scss
@@ -27,7 +27,7 @@
             margin-top: 40px;
             max-width: fit-content;
             max-width: -moz-fit-content;
-            max-width: -webki-fit-content;
+            max-width: -webkit-fit-content;
         }
     }
     &__mobilebg{
