--- a/sass/sections/_productExpert.scss
+++ b/sass/sections/_productExpert.scss
@@ -38,7 +38,7 @@
             margin: 0 auto 15px;
             max-width: fit-content;
             max-width: -moz-fit-content;
-            max-width: -webki-fit-content;
+            max-width: -webkit-fit-content;
             padding: 3px 10px 0;
             background: #44c680;
         }
