--- a/sass/subpages/_blog.scss
+++ b/sass/subpages/_blog.scss
@@ -507,7 +507,7 @@ body.single-post{
         a{
             max-width: fit-content;
             max-width: -moz-fit-content;
-            max-width: -webki-fit-content;
+            max-width: -webkit-fit-content;
             margin: 0 auto;
         }
     }
