--- a/sass/subpages/_products.scss
+++ b/sass/subpages/_products.scss
@@ -94,7 +94,7 @@
                 .btn{
                     max-width: fit-content;
                     max-width: -moz-fit-content;
-                    max-width: -webki-fit-content;
+                    max-width: -webkit-fit-content;
                     margin: 0 auto;
                 }
             }
