--- a/sass/sections/_logosList.scss
+++ b/sass/sections/_logosList.scss
@@ -9,7 +9,7 @@
     &__logo{
         width: fit-content;
         max-width: -moz-fit-content;
-        max-width: -webki-fit-content;
+        max-width: -webkit-fit-content;
         text-align: center;
         max-height: 40px;
         opacity: .7;
