--- a/sass/subpages/_cart.scss
+++ b/sass/subpages/_cart.scss
@@ -118,7 +118,7 @@ body.woocommerce-cart{
                     display: block;
                     max-width: fit-content;
                     max-width: -moz-fit-content;
-                    max-width: -webki-fit-content;
+                    max-width: -webkit-fit-content;
                     background: #44c680;
                     padding: 0 3px;
                 }
@@ -231,7 +231,7 @@ body.woocommerce-cart{
                         &[name="update_cart"]{
                             max-width: fit-content;
                             max-width: -moz-fit-content;
-                            max-width: -webki-fit-content;
+                            max-width: -webkit-fit-content;
 
                             &:disabled{
                                 pointer-events: none;
@@ -247,7 +247,7 @@ body.woocommerce-cart{
                     width: 100%;
                     max-width: fit-content;
                     max-width: -moz-fit-content;
-                    max-width: -webki-fit-content;
+                    max-width: -webkit-fit-content;
                     height: 36px;
                     background-color: #44c680;
                     color: #fff;
@@ -457,7 +457,7 @@ body.woocommerce-cart{
                                 .coupon-trigger{
                                     max-width: fit-content;
                                     max-width: -moz-fit-content;
-                                    max-width: -webki-fit-content;
+                                    max-width: -webkit-fit-content;
                                     margin: 0 auto;
                                 }
                                 &__toshow{
