--- a/sass/subpages/_productPage.scss
+++ b/sass/subpages/_productPage.scss
@@ -405,7 +405,7 @@ body.postid-21695{
                         border: 0;
                         min-width: fit-content;
                         max-width: -moz-fit-content;
-                        max-width: -webki-fit-content;
+                        max-width: -webkit-fit-content;
                         cursor: pointer;
                         transition: ease .3s;
 
@@ -725,7 +725,7 @@ body.postid-21695{
         justify-content: space-between;
         max-width: fit-content;
         max-width: -moz-fit-content;
-        max-width: -webki-fit-content;
+        max-width: -webkit-fit-content;
         margin: 0 auto;
     }
     &__video{
@@ -944,7 +944,7 @@ body.postid-21695{
     .btn{
         max-width: fit-content;
         max-width: -moz-fit-content;
-        max-width: -webki-fit-content;
+        max-width: -webkit-fit-content;
         margin: 50px auto;
         cursor: pointer;
         box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, .5);
@@ -1284,7 +1284,7 @@ body.postid-21695{
             flex-direction: row;
             max-width: fit-content;
             max-width: -moz-fit-content;
-            max-width: -webki-fit-content;
+            max-width: -webkit-fit-content;
             margin: 0 auto 10px;
 
             span{
@@ -1409,7 +1409,7 @@ body.postid-21695{
         flex-direction: row;
         max-width: fit-content;
         max-width: -moz-fit-content;
-        max-width: -webki-fit-content;
+        max-width: -webkit-fit-content;
         margin: 0 auto;
         padding: 30px 20px;
         border-bottom: 1px solid #DBDBDB;
