New products launch + page shop

--- a/css/custom.css
+++ b/css/custom.css
@@ -480,8 +480,7 @@ body.postid-21695 .productComponents #openModal:hover {
   line-height: 30px;
   border: 0;
   min-width: fit-content;
-  min-width: -moz-fit-content;
-  min-width: -webkit-fit-content;
+  max-width: -webkit-fit-content;
   cursor: pointer;
   transition: ease .3s;
 }
@@ -773,7 +772,6 @@ body.postid-21695 .productComponents #openModal:hover {
   display: flex;
   justify-content: space-between;
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
   margin: 0 auto;
 }
@@ -991,7 +989,6 @@ body.postid-21695 .productComponents #openModal:hover {
 
 .productComponents .btn {
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
   margin: 50px auto;
   cursor: pointer;
@@ -1335,7 +1332,6 @@ body.postid-21695 .productComponents #openModal:hover {
   display: flex;
   flex-direction: row;
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
   margin: 0 auto 10px;
 }
@@ -1421,7 +1417,6 @@ body.postid-21695 .productComponents #openModal:hover {
   display: flex;
   flex-direction: row;
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
   margin: 0 auto;
   padding: 30px 20px;
@@ -2536,7 +2531,6 @@ body.single-post nav.post-navigation {
 
 .contentPost .postProducts a {
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
   margin: 0 auto;
 }
@@ -2719,7 +2713,6 @@ body.woocommerce-cart .entry-content {
 .ssCart table.cart td.product-price ins {
   display: block;
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
   background: #44c680;
   padding: 0 3px;
@@ -2839,7 +2832,6 @@ body.woocommerce-cart .entry-content {
 
 .ssCart table.cart td.actions .coupon-actions button[name="update_cart"] {
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
 }
 
@@ -2854,7 +2846,6 @@ body.woocommerce-cart .entry-content {
   justify-content: center;
   width: 100%;
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
   height: 36px;
   background-color: #44c680;
@@ -3043,7 +3034,6 @@ body.woocommerce-cart .entry-content {
   }
   .ssCart table.shop_table tr td.actions .coupon-actions .coupon .coupon-trigger {
     max-width: fit-content;
-    max-width: -moz-fit-content;
     max-width: -webkit-fit-content;
     margin: 0 auto;
   }
@@ -5096,7 +5086,6 @@ body.woocommerce-account .entry-header {
 
 .pageProducts .productsInfo__section .content .btn {
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
   margin: 0 auto;
 }
@@ -5219,11 +5208,10 @@ body.woocommerce-account .entry-header {
 }
 
 .shopHeading__wrap h1 {
-  font-size: 42px;
-  line-height: 52px;
+  font-size: 36px;
+  line-height: 46px;
   color: #000;
   text-align: center;
-  text-transform: uppercase;
   margin: 0 0 15px;
 }
 
@@ -5380,7 +5368,6 @@ body.woocommerce-account .entry-header {
 
 .productTile .btn {
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
   margin: 0 auto;
 }
@@ -5442,7 +5429,6 @@ body.woocommerce-account .entry-header {
 .homeHeader__content a {
   margin-top: 40px;
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
 }
 
@@ -5727,7 +5713,6 @@ body.woocommerce-account .entry-header {
 
 .homeInfoTile .btn {
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
   margin: 15px auto 0;
 }
@@ -5873,8 +5858,7 @@ body.woocommerce-account .entry-header {
 
 .logosList__logo {
   width: fit-content;
-  width: -moz-fit-content;
-  width: -webkit-fit-content;
+  max-width: -webkit-fit-content;
   text-align: center;
   max-height: 40px;
   opacity: .7;
@@ -6083,7 +6067,6 @@ body.woocommerce-account .entry-header {
   font-weight: 400;
   margin: 0 auto 15px;
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
   padding: 3px 10px 0;
   background: #44c680;
@@ -6286,7 +6269,6 @@ body.admin-bar .siteHeader--float {
   right: 0;
   margin: 5px auto 0;
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
   text-align: center;
 }
@@ -6433,7 +6415,6 @@ body.admin-bar .siteHeader--float {
 .menuDropdown__list {
   display: flex;
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
   margin: 0 auto 30px;
 }
@@ -6950,7 +6931,6 @@ body.admin-bar .mobileMenu {
   text-align: center;
   color: #fff !important;
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
   padding: 4px 8px 2px;
   background: #6BC385;
@@ -6976,7 +6956,6 @@ body.admin-bar .mobileMenu {
 
 .modalAdded__continue .btn {
   max-width: fit-content;
-  max-width: -moz-fit-content;
   max-width: -webkit-fit-content;
   height: 40px;
 }
@@ -7008,7 +6987,6 @@ body.admin-bar .mobileMenu {
   }
   .modalAdded__products {
     width: fit-content;
-    width: -moz-fit-content;
     width: -webkit-fit-content;
     min-width: auto;
     flex-wrap: nowrap;
