--- a/sass/subpages/_blog.scss
+++ b/sass/subpages/_blog.scss
@@ -1,3 +1,96 @@
+.blogNav{
+    &__wrap{
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        margin: 0 0 50px;
+    }
+    &__side{
+        width: calc(100% / 2);
+
+        h3{
+            font-size: 28px;
+            line-height: 34px;
+            font-weight: 400;
+            color: #000;
+            text-align: left;
+            margin: 0 0 15px;
+        }
+        ul{
+            padding: 0 20px;
+            margin: 0;
+
+            li{
+                padding: 3px 0;
+
+                a{
+                    font-size: 18px;
+                    line-height: 24px;
+                    text-decoration: underline;
+                    color: #000;
+                    transition: ease .3s;
+
+                    &:hover{
+                        opacity: .7;
+                    }
+                }
+            }
+        }
+    }
+}
+@media (max-width: 1630px){
+    .blogNav{
+        &__wrap{
+            margin: 50px 0;
+        }
+        &__side{
+            h3{
+                text-align: center;
+            }
+        }
+    }
+}
+@media (max-width: 991px){
+    .blogNav{
+        &__wrap{
+            flex-direction: column;
+        }
+        &__side{
+            width: 100%;
+            margin: 0 0 30px;
+
+            &:last-of-type{
+                margin: 0;
+            }
+
+            h3{
+                font-size: 24px;
+                line-height: 28px;
+            }
+        }
+    }
+}
+@media (max-width: 767px){
+    .blogNav{
+        &__side{
+            h3{
+                font-size: 21px;
+                line-height: 24px;
+            }
+            ul{
+                li{
+                    padding: 2px 0;
+
+                    a{
+                        font-size: 16px;
+                        line-height: 21px;
+                    }
+                }
+            }
+        }
+    }
+}
+
 .blogHeading{
     margin: 70px 0;
 
