--- a/css/custom.css
+++ b/css/custom.css
@@ -5124,6 +5124,54 @@ body.woocommerce-account .entry-header {
   object-position: center;
 }
 
+.pageProducts .productsList {
+  padding: 50px 0;
+}
+
+.pageProducts .productsList__list {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 1215px;
+  margin: 0 auto;
+}
+
+.pageProducts .productsList__product {
+  display: block;
+  width: 100%;
+  max-width: 190px;
+  margin: 0 6px;
+  transition: ease .3s;
+}
+
+.pageProducts .productsList__product:hover {
+  opacity: .7;
+}
+
+.pageProducts .productsList__product .thumb {
+  height: 200px;
+  width: 100%;
+}
+
+.pageProducts .productsList__product .thumb img {
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.pageProducts .productsList__product p {
+  font-size: 14px;
+  font-weight: 400;
+  margin: 0;
+  color: #000;
+  padding: 10px;
+  background-color: #fff;
+  min-height: 62px;
+  text-align: center;
+}
+
 .pageProducts .productsInfo {
   margin: 0 auto 100px;
 }
@@ -5251,6 +5299,15 @@ body.woocommerce-account .entry-header {
   }
   .pageProducts .productsHeader__content .wrap .content {
     text-align: center;
+  }
+  .pageProducts .productsList {
+    padding: 50px 0 0;
+  }
+  .pageProducts .productsList__product {
+    opacity: .4;
+  }
+  .pageProducts .productsList__product.slick-current {
+    opacity: 1;
   }
   .pageProducts .productsInfo__section {
     flex-direction: column-reverse !important;
