--- a/sass/subpages/_products.scss
+++ b/sass/subpages/_products.scss
@@ -46,6 +46,51 @@
             }
         }
     }
+    .productsList{
+        padding: 50px 0;
+
+        &__list{
+            display: flex;
+            align-items: flex-start;
+            justify-content: center;
+            flex-wrap: wrap;
+            max-width: 1215px;
+            margin: 0 auto;
+        }
+        &__product{
+            display: block;
+            width: 100%;
+            max-width: 190px;
+            margin: 0 6px;
+            transition: ease .3s;
+
+            &:hover{
+                opacity: .7;
+            }
+
+            .thumb{
+                height: 200px;
+                width: 100%;
+
+                img{
+                    max-width: 100%;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+            p{
+                font-size: 14px;
+                font-weight: 400;
+                margin: 0;
+                color: #000;
+                padding: 10px;
+                background-color: #fff;
+                min-height: 62px;
+                text-align: center;
+            }
+        }
+    }
     .productsInfo{
         margin: 0 auto 100px;
         
@@ -194,6 +239,17 @@
                     .content{
                         text-align: center;
                     }
+                }
+            }
+        }
+        .productsList{
+            padding: 50px 0 0;
+            
+            &__product{
+                opacity: .4;
+
+                &.slick-current{
+                    opacity: 1;
                 }
             }
         }
