--- a/sass/subpages/_products.scss
+++ b/sass/subpages/_products.scss
@@ -243,15 +243,7 @@
             }
         }
         .productsList{
-            padding: 50px 0 0;
-            
-            &__product{
-                opacity: .4;
-
-                &.slick-current{
-                    opacity: 1;
-                }
-            }
+            padding: 20px 0 50px;
         }
         .productsInfo{
             &__section{
@@ -279,6 +271,17 @@
 }
 @media (max-width: 767px){
     .pageProducts{
+        .productsList{
+            padding: 50px 0 0;
+            
+            &__product{
+                opacity: .4;
+
+                &.slick-current{
+                    opacity: 1;
+                }
+            }
+        }
         .productsInfo{
             margin: 50px auto;
 
