--- a/sass/parts/_siteHeader.scss
+++ b/sass/parts/_siteHeader.scss
@@ -5,6 +5,9 @@ body{
                 top: 32px;
             }
         }
+        .wpml-ls{
+            display: none !important;
+        }
     }
 }
 .siteHeader{
@@ -110,6 +113,55 @@ body{
 
         .language{
             margin-right: 10px;
+
+            &__select{
+                width: 30px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                transition: ease .3s;
+                cursor: pointer;
+
+                &:hover{
+                    opacity: .7;
+                }
+
+                img{
+                    max-width: 18px;
+                    width: 100%;
+
+                    @keyframes pulseOpactiy {
+                        0%   {opacity: 1;}
+                        50%  {opacity: .5;}
+                        100%  {opacity: 1;}
+                    }
+
+                    &.default{
+                        &.loading{
+                            animation-name: pulseOpactiy;
+                            animation-duration: 1s;
+                            animation-iteration-count: infinite;
+                        }
+                    }
+                }
+                .lang{
+                    display: none;
+                    align-items: center;
+                    justify-content: center;
+                    border-radius: 100%;
+                    overflow: hidden;
+
+                    &.active{
+                        display: flex;
+                    }
+
+                    img{
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+            }
 
             ul{
                 margin: 0 10px 0 0;
