--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -199,10 +199,30 @@ body.admin-bar{
       pointer-events: none;
       transition: ease .3s;
     }
+    &:after{
+      content: '';
+      background-image: url('https://supersonicfood.com/wp-includes/images/spinner-2x.gif');
+      background-size: 40px;
+      width: 40px;
+      height: 40px;
+      position: absolute;
+      right: 0;
+      left: 0;
+      margin: 0 auto;
+      top: 50%;
+      transform: translate(0, -50%);
+      opacity: 0;
+      z-index: 10;
+      pointer-events: none;
+      transition: ease .3s;
+    }
     &.loading{
       &:before{
         opacity: .6;
         pointer-events: all;
+      }
+      &:after{
+        opacity: 1;
       }
     }
   }
