--- a/sass/parts/_siteHeader.scss
+++ b/sass/parts/_siteHeader.scss
@@ -115,16 +115,9 @@ body{
             margin-right: 10px;
 
             &__select{
-                width: 30px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                transition: ease .3s;
-                cursor: pointer;
-
-                &:hover{
-                    opacity: .7;
-                }
 
                 img{
                     max-width: 18px;
@@ -144,21 +137,43 @@ body{
                         }
                     }
                 }
-                .lang{
-                    display: none;
+                p{
+                    display: flex;
                     align-items: center;
-                    justify-content: center;
-                    border-radius: 100%;
-                    overflow: hidden;
+                    margin: 0 10px 0 0;
+                    font-size: 14px;
+                    line-height: 1;
 
-                    &.active{
-                        display: flex;
-                    }
+                    .selectLang{
+                        width: 18px;
+                        height: 18px;
+                        border-radius: 100%;
+                        border: 1px solid #000;
+                        margin-left: 8px;
+                        overflow: hidden;
+                        transition: ease .3s;
+                        cursor: pointer;
+    
+                        &:hover{
+                            opacity: .7;
+                        }
 
-                    img{
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
+                        &.notSelected{
+                            text-decoration: underline;
+                        }
+                        .flag{
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            width: 20px;
+                            height: 20px;
+    
+                            img{
+                                width: 100%;
+                                height: 100%;
+                                object-fit: cover;
+                            }
+                        }
                     }
                 }
             }
