--- a/sass/subpages/_productPage.scss
+++ b/sass/subpages/_productPage.scss
@@ -1096,6 +1096,7 @@ body.postid-21695{
 
 .productInfosections{
     padding-bottom: 50px;
+    margin-top: 50px;
 
     &__section{
         display: flex;
